modified:   14. Defining Classes/Generics.ipynb new file:   14. Defining Classes/_img/DogKennelRelease1.png new file:   14. Defining Classes/_img/DogKennelRelease2.jpg new file:   14. Defining Classes/_img/DogKennelRelease3.jpg new file:   14. Defining Classes/_img/InitDogKennel.png

--- a/14. Defining Classes/Generics.ipynb
+++ b/14. Defining Classes/Generics.ipynb
@@ -32,15 +32,614 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "If a method needs additional information to operate properly, this information is passed to the method using parameters.    \n",
+    "   \n",
+    "During the execution of the program, when calling this particular method, we pass arguments to the method, which are assigned to its parameters and then used in the method’s body.   \n",
+    "\n",
+    "Like with methods, when we know that the functionality (actions) encapsulated into a `class` can be applied not only to objects of one, but to **many** (**heterogeneous**) **types**, and even in the scenario that these **types should not be known at the time of declaring the class**, we can use a functionality of $C\\#$ called **generics**.\n",
+    "   \n",
+    "**Generics** allows us to declare parameters of a given class by **indicating an unknown type** that the class will eventually use. Then, when we instantiate our **generic** class, we **replace the unknown type with a specific one**. \n",
+    "   \n",
+    "Accordingly, the newly created object will **only work with objects of this type** that we have assigned at its initialization. The specific type can be **any data type** that the compiler recognizes, including `class`, `struct`, `enum`, or another **generic** class."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "### Why Use Generics?"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "To illustrate an applicable use case for **generics**, suppose we have declared the following class representing a **Dog**:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
     "vscode": {
      "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "public class Dog\n",
+    "{\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "So let's say we set out to define a class that represents a **shelter for homeless animals**, containing a specific number of free kennels which determine the capacity of animals that can find refuge in the shelter. Let's also say that one important caveat to  class that we want to create is that it needs to **only accommodate animals of the same kind**, in our case, `Dog`s only."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "public class AnimalShelter\n",
+    "{\n",
+    "\n",
+    "    // FIELD DEFINITIONS ---------------------------------------------------------------------\n",
+    "    private const int DEFAULT_CAPACITY = 20;\n",
+    "    //----------------------------------------------------------------------------------------\n",
+    "    private int placesOccupied;\n",
+    "    //----------------------------------------------------------------------------------------\n",
+    "    public Dog[] kennels;\n",
+    "    //----------------------------------------------------------------------------------------\n",
+    "\n",
+    "\n",
+    "    // CONSTRUCTORS --------------------------------------------------------------------------\n",
+    "    // The first constructor is parameterless, \n",
+    "    // but uses constructor chaining to pass the DEFAULT_CAPACITY as an argument\n",
+    "    public AnimalShelter() : this( DEFAULT_CAPACITY )\n",
+    "    {\n",
+    "    }\n",
+    "    //----------------------------------------------------------------------------------------\n",
+    "    // Another constructor initializes the Dog Array \n",
+    "    // to reflect a capacity which is defined by the numberOfPlaces argument\n",
+    "    public AnimalShelter( int numberOfPlaces )\n",
+    "    {\n",
+    "        this.kennels = new Dog[ numberOfPlaces ];\n",
+    "        this.placesOccupied = 0;\n",
+    "    }\n",
+    "    //----------------------------------------------------------------------------------------\n",
+    "\n",
+    "\n",
+    "    // METHODS -------------------------------------------------------------------------------\n",
+    "    // Add a New Dog to the Dog Array, provided that there is still enough space  \n",
+    "    public void Shelter( Dog newDog )\n",
+    "    {\n",
+    "\n",
+    "        if ( this.placesOccupied <= this.kennels.Length)\n",
+    "            this.kennels[ this.placesOccupied++ ] = newDog;\n",
+    "            \n",
+    "    }\n",
+    "    //----------------------------------------------------------------------------------------\n",
+    "    // Remove a Dog from the Dog Array and returns that removed Dog, \n",
+    "    // provided that the given Dog Array Index is valid \n",
+    "    public Dog Release( int dogIndex )\n",
+    "    {\n",
+    "\n",
+    "        if ( dogIndex < 0 || dogIndex >= this.placesOccupied )\n",
+    "        {\n",
+    "            throw new ArgumentOutOfRangeException(\n",
+    "                $\"Index {dogIndex} is an invalid selection.\"\n",
+    "            );  \n",
+    "        }\n",
+    "\n",
+    "\n",
+    "        Dog releasedDog = this.kennels[ dogIndex ];\n",
+    "\n",
+    "\n",
+    "        for( int currentIndex = dogIndex; currentIndex < this.placesOccupied - 1; currentIndex++ )\n",
+    "        {\n",
+    "            this.kennels[ currentIndex ] = this.kennels[ currentIndex + 1 ];\n",
+    "        }\n",
+    "\n",
+    "\n",
+    "        this.kennels[ (this.placesOccupied--) - 1 ] = null;\n",
+    "\n",
+    "\n",
+    "        return releasedDog;\n",
+    "\n",
+    "    }\n",
+    "    //----------------------------------------------------------------------------------------\n",
+    "\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Below, let's instantiate a Shelter, specifically for `Dog`s, with enough kennel space to fit up to 5:  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "AnimalShelter dogShelter = new AnimalShelter(5);"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Now, let's add 4 new `Dog`s to our `dogShelter`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "for( int kennelIndex = 0; kennelIndex < dogShelter.kennels.Length - 1; kennelIndex++ )\n",
+    "    dogShelter.Shelter( new Dog() );"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<img src=\"_img/InitDogKennel.png\" style=\"width: 600px; display: block; margin: auto\"></img>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><thead><tr><th><i>index</i></th><th>value</th></tr></thead><tbody><tr><td>0</td><td></td></tr><tr><td>1</td><td></td></tr><tr><td>2</td><td></td></tr><tr><td>3</td><td></td></tr><tr><td>4</td><td><div class=\"dni-plaintext\"><pre>&lt;null&gt;</pre></div></td></tr></tbody></table><style>\r\n",
+       ".dni-code-hint {\r\n",
+       "    font-style: italic;\r\n",
+       "    overflow: hidden;\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview {\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview td {\r\n",
+       "    vertical-align: top;\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "details.dni-treeview {\r\n",
+       "    padding-left: 1em;\r\n",
+       "}\r\n",
+       "table td {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "table tr { \r\n",
+       "    vertical-align: top; \r\n",
+       "    margin: 0em 0px;\r\n",
+       "}\r\n",
+       "table tr td pre \r\n",
+       "{ \r\n",
+       "    vertical-align: top !important; \r\n",
+       "    margin: 0em 0px !important;\r\n",
+       "} \r\n",
+       "table th {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "</style>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "dogShelter.kennels"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Now suppose we wanted to Release the `Dog` in the 2nd kennel:"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<img src=\"_img/DogKennelRelease1.png\" style=\"width: 600px; display: block; margin: auto\"></img>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "Dog releasedAnimal = dogShelter.Release( 1 );"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<img src=\"_img/DogKennelRelease2.jpg\" style=\"width: 600px; display: block; margin: auto\"></img>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "$$\\Huge{\\downarrow}$$"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<img src=\"_img/DogKennelRelease3.jpg\" style=\"width: 600px; display: block; margin: auto\"></img>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><thead><tr><th><i>index</i></th><th>value</th></tr></thead><tbody><tr><td>0</td><td></td></tr><tr><td>1</td><td></td></tr><tr><td>2</td><td></td></tr><tr><td>3</td><td><div class=\"dni-plaintext\"><pre>&lt;null&gt;</pre></div></td></tr><tr><td>4</td><td><div class=\"dni-plaintext\"><pre>&lt;null&gt;</pre></div></td></tr></tbody></table><style>\r\n",
+       ".dni-code-hint {\r\n",
+       "    font-style: italic;\r\n",
+       "    overflow: hidden;\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview {\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview td {\r\n",
+       "    vertical-align: top;\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "details.dni-treeview {\r\n",
+       "    padding-left: 1em;\r\n",
+       "}\r\n",
+       "table td {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "table tr { \r\n",
+       "    vertical-align: top; \r\n",
+       "    margin: 0em 0px;\r\n",
+       "}\r\n",
+       "table tr td pre \r\n",
+       "{ \r\n",
+       "    vertical-align: top !important; \r\n",
+       "    margin: 0em 0px !important;\r\n",
+       "} \r\n",
+       "table th {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "</style>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "dogShelter.kennels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div class=\"dni-plaintext\"><pre>Submission#2+Dog</pre></div><style>\r\n",
+       ".dni-code-hint {\r\n",
+       "    font-style: italic;\r\n",
+       "    overflow: hidden;\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview {\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview td {\r\n",
+       "    vertical-align: top;\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "details.dni-treeview {\r\n",
+       "    padding-left: 1em;\r\n",
+       "}\r\n",
+       "table td {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "table tr { \r\n",
+       "    vertical-align: top; \r\n",
+       "    margin: 0em 0px;\r\n",
+       "}\r\n",
+       "table tr td pre \r\n",
+       "{ \r\n",
+       "    vertical-align: top !important; \r\n",
+       "    margin: 0em 0px !important;\r\n",
+       "} \r\n",
+       "table th {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "</style>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "releasedAnimal"
+   ]
   }
  ],
  "metadata": {
@@ -56,13 +655,6 @@
      {
       "aliases": [],
       "name": "csharp"
-     },
-     {
-      "aliases": [
-       "frontend"
-      ],
-      "languageName": null,
-      "name": "vscode"
      }
     ]
    }
