modified:   14. Defining Classes/Generics.ipynb

--- a/14. Defining Classes/Generics.ipynb
+++ b/14. Defining Classes/Generics.ipynb
@@ -501,7 +501,22 @@
     }
    },
    "source": [
-    "$$\\Huge{\\Downarrow}$$"
+    "$$\\Huge{\\Downarrow \\Downarrow}$$"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "$$\\Huge{\\Downarrow \\Downarrow}$$"
    ]
   },
   {
