modified:   14. Defining Classes/Generics.ipynb

--- a/14. Defining Classes/Generics.ipynb
+++ b/14. Defining Classes/Generics.ipynb
@@ -653,6 +653,151 @@
    "source": [
     "releasedAnimal"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "So, while the process above has worked fairly well so far, what would happen if we instead wanted to use our `AnimalShelter` to store instances of the following `Cat` `class`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "public class Cat\n",
+    "{\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Consequently, if we want to create an `AnimalShelter` for `Cat`s, we will **not be able to reuse the class that we already created**, although the operations of adding and removing animals from the shelter will be identical.    \n",
+    "   \n",
+    "Therefore, we have to literally copy the `AnimalShelter` class, and change only the type of the objects which are handled.   \n",
+    "\n",
+    "Otherwise, we would run into the following error:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "(3,21): error CS1503: Argument 1: cannot convert from 'Cat' to 'Dog'",
+     "output_type": "error",
+     "traceback": [
+      "(3,21): error CS1503: Argument 1: cannot convert from 'Cat' to 'Dog'"
+     ]
+    }
+   ],
+   "source": [
+    "AnimalShelter catShelter = new AnimalShelter(5);\n",
+    "\n",
+    "catShelter.Shelter( new Cat() )"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "As such, we can see that this solution of the problem is **not sufficiently comprehensive** as it does not provide a single class that describes our shelter for **any kind of animal** (i.e. for all objects) of the same type."
+   ]
   }
  ],
  "metadata": {
