modified:   14. Defining Classes/Generics.ipynb

--- a/14. Defining Classes/Generics.ipynb
+++ b/14. Defining Classes/Generics.ipynb
@@ -654,6 +654,10 @@
    "source": [
     "public class Cat\n",
     "{\n",
+    "    public override string ToString()\n",
+    "    {\n",
+    "        return \"MEOW!\";\n",
+    "    }\n",
     "}"
    ]
   },
@@ -1459,6 +1463,406 @@
     "Console.WriteLine( \n",
     "    $\"After the Swap, 1st_Word = {firstWord} and 2nd_Word = {secondWord}\"\n",
     ")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "### Putting It All Together - A Generic `AnimalShelter` Class "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "We are now ready to redesign our `AnimalShelter` class to support `Cat` types, in addition to `Dog` types:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "public class AnimalShelter <T>\n",
+    "{\n",
+    "\n",
+    "    // FIELD DEFINITIONS ---------------------------------------------------------------------\n",
+    "    private const int DEFAULT_CAPACITY = 20;\n",
+    "    private int placesOccupied;\n",
+    "    public T[] kennels;\n",
+    "    //----------------------------------------------------------------------------------------\n",
+    "\n",
+    "\n",
+    "    // CONSTRUCTORS --------------------------------------------------------------------------\n",
+    "    // The first constructor is parameterless, \n",
+    "    // but uses constructor chaining to pass the DEFAULT_CAPACITY as an argument\n",
+    "    public AnimalShelter() : this( DEFAULT_CAPACITY )\n",
+    "    {\n",
+    "    }\n",
+    "\n",
+    "    // Another constructor initializes the Animal Array \n",
+    "    // to reflect a capacity which is defined by the numberOfPlaces argument\n",
+    "    public AnimalShelter( int numberOfPlaces )\n",
+    "    {\n",
+    "        this.kennels = new T[ numberOfPlaces ];\n",
+    "        this.placesOccupied = 0;\n",
+    "    }\n",
+    "    //----------------------------------------------------------------------------------------\n",
+    "\n",
+    "\n",
+    "    // METHODS -------------------------------------------------------------------------------\n",
+    "    // Add a New Animal to the Animal Array, provided that there is still enough space  \n",
+    "    public void Shelter( T newAnimal )\n",
+    "    {\n",
+    "\n",
+    "        if ( this.placesOccupied <= this.kennels.Length)\n",
+    "            this.kennels[ this.placesOccupied++ ] = newAnimal;\n",
+    "            \n",
+    "    }\n",
+    "\n",
+    "    // Remove a Dog from the Animal Array and returns that removed Dog, \n",
+    "    // provided that the given Animal Array Index is valid \n",
+    "    public T Release( int animalIndex )\n",
+    "    {\n",
+    "\n",
+    "        if ( animalIndex < 0 || animalIndex >= this.placesOccupied )\n",
+    "        {\n",
+    "            throw new ArgumentOutOfRangeException(\n",
+    "                $\"Index {animalIndex} is an invalid selection.\"\n",
+    "            );  \n",
+    "        }\n",
+    "\n",
+    "\n",
+    "        T releasedAnimal = this.kennels[ animalIndex ];\n",
+    "\n",
+    "\n",
+    "        for( int currentIndex = animalIndex; currentIndex < this.placesOccupied - 1; currentIndex++ )\n",
+    "        {\n",
+    "            this.kennels[ currentIndex ] = this.kennels[ currentIndex + 1 ];\n",
+    "        }\n",
+    "\n",
+    "\n",
+    "       // The line below will cause an error \n",
+    "       // since we are trying to use the default value for a reference type, \n",
+    "       // but we are not sure whether this type is a reference type or a primitive:\n",
+    "       \n",
+    "            // this.kennels[ (this.placesOccupied--) - 1 ] = null;\n",
+    "\n",
+    "        // As such, to avoid this issue\n",
+    "        // we should replace 'null' with the default(T) construct:\n",
+    "        this.kennels[ (this.placesOccupied--) - 1 ] = default(T);\n",
+    "\n",
+    "\n",
+    "        return releasedAnimal;\n",
+    "\n",
+    "    }\n",
+    "    //----------------------------------------------------------------------------------------\n",
+    "\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Below, let's instantiate a Shelter, specifically for `Cat`s, with enough kennel space to fit up to 5:  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "AnimalShelter <Cat> catShelter = new AnimalShelter <Cat> (5);"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Now, let's add enough new `Cats`s to our `catShelter` to fill every kennel except the last:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "for( int kennelIndex = 0; kennelIndex < catShelter.kennels.Length - 1; kennelIndex++ )\n",
+    "    catShelter.Shelter( new Cat() );"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MEOW!\n",
+      "MEOW!\n",
+      "MEOW!\n",
+      "MEOW!\n",
+      "<null>\n"
+     ]
+    }
+   ],
+   "source": [
+    "foreach( Cat kennel in catShelter.kennels )\n",
+    "{\n",
+    "    Console.WriteLine(  (kennel != null) ? kennel : \"<null>\" );\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Now suppose we wanted to Release the `Cat` in the 2nd kennel:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "Cat releasedAnimal = catShelter.Release( 1 );"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MEOW!\n",
+      "MEOW!\n",
+      "MEOW!\n",
+      "<null>\n",
+      "<null>\n"
+     ]
+    }
+   ],
+   "source": [
+    "foreach( Cat kennel in catShelter.kennels )\n",
+    "{\n",
+    "    Console.WriteLine(  (kennel != null) ? kennel : \"<null>\" );\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "As demonstrated above, we have now adapted the `AnimalShelter` class to accept animal objects of **any type**."
    ]
   }
  ],
