modified:   15. Text Files/Streams.ipynb

--- a/15. Text Files/Streams.ipynb
+++ b/15. Text Files/Streams.ipynb
@@ -227,6 +227,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "dotnet_interactive": {
@@ -236,7 +237,11 @@
      "kernelName": "csharp"
     }
    },
-   "source": []
+   "source": [
+    "To **create or open a stream** means to connect the stream to a data source, a mechanism for data transfer or another stream. \n",
+    "   \n",
+    "For example, when we have a *file stream*, then we pass the *file name* and the *file mode* in which it is to be opened (*reading*, *writing* or *reading and writing simultaneously*)."
+   ]
   },
   {
    "attachments": {},
@@ -269,6 +274,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "dotnet_interactive": {
@@ -278,7 +284,11 @@
      "kernelName": "csharp"
     }
    },
-   "source": []
+   "source": [
+    "**Reading** means **extracting data from the stream**.    \n",
+    "\n",
+    "Reading is **always performed sequentially** from the current position of the stream. Reading is a **blocking operation**, so if the other party has not sent data while we are trying to read or the sent data has not yet arrived, there may occur a delay – a few milliseconds to hours, days or greater."
+   ]
   },
   {
    "attachments": {},
@@ -311,6 +321,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "dotnet_interactive": {
@@ -320,7 +331,11 @@
      "kernelName": "csharp"
     }
    },
-   "source": []
+   "source": [
+    "**Writing** means **sending data to the stream** in a specific way.    \n",
+    "   \n",
+    "The writing is performed from the current position of the stream. Writing presents another **blocking operation** before the data is sent on its way."
+   ]
   },
   {
    "attachments": {},
@@ -353,6 +368,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "dotnet_interactive": {
@@ -362,7 +378,11 @@
      "kernelName": "csharp"
     }
    },
-   "source": []
+   "source": [
+    "**Positioning** or **seeking** in the stream means to **move the current position of the stream**.   \n",
+    "\n",
+    "Moving is done according to the current position, where we can position according to the current position, beginning of the stream, or the end of the stream."
+   ]
   },
   {
    "attachments": {},
@@ -395,6 +415,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "dotnet_interactive": {
@@ -404,7 +425,11 @@
      "kernelName": "csharp"
     }
    },
-   "source": []
+   "source": [
+    "To **close** or **disconnect** a stream means to complete the work with the stream and **release the occupied resources**.    \n",
+    "   \n",
+    "Closing must take place as soon as possible after the stream has served its purpose, because a resource opened by a user, usually cannot be used by other users (including other programs on the same computer that run parallel to our program)."
+   ]
   },
   {
    "attachments": {},
